<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/bill"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etBill"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:ems="8"
        android:gravity="center_horizontal"
        android:hint="@string/zero"
        android:inputType="numberDecimal"
        android:textColor="@color/primaryText"
        android:textColorHint="@color/primaryText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tvTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/tip"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBill" />

    <TextView
        android:id="@+id/tvTipPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:textColor="@color/primaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBill"
        tools:text="15" />

    <TextView
        android:id="@+id/tvPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/people"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/tvPeopleCount"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:ems="8"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textColor="@color/primaryText"
        android:backgroundTint="@color/colorPrimaryLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:text="@string/calculate"
        android:textColor="@color/colorPrimaryLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPeopleCount" />

    <TextView
        android:id="@+id/tvTipOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/Tip"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculate" />

    <TextView
        android:id="@+id/tvTipValue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:text="@string/default_amount"
        android:textColor="@color/primaryText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculate" />

    <TextView
        android:id="@+id/tvTotalValue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/default_amount"
        android:textColor="@color/primaryText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvTipValue"
        app:layout_constraintTop_toBottomOf="@+id/tvBillPersonValue" />

    <TextView
        android:id="@+id/tvTotalOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/total"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/tvTipOutput"
        app:layout_constraintTop_toBottomOf="@+id/tvBillPersonOutput" />

    <TextView
        android:id="@+id/tvTipPersonOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tip_per_person"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/tvTipOutput"
        app:layout_constraintTop_toBottomOf="@+id/tvTipOutput" />

    <TextView
        android:id="@+id/tvBillPersonOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/bill_per_person"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTipPersonOutput" />

    <TextView
        android:id="@+id/tvTipPersonValue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/default_amount"
        android:textSize="18sp"
        android:textColor="@color/primaryText"
        app:layout_constraintStart_toStartOf="@+id/tvTipValue"
        app:layout_constraintTop_toBottomOf="@+id/tvTipValue" />

    <TextView
        android:id="@+id/tvBillPersonValue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/default_amount"
        android:textColor="@color/primaryText"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tvTipValue"
        app:layout_constraintTop_toBottomOf="@+id/tvTipPersonValue" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/clear"
        android:textColor="@color/colorPrimaryLight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPeopleCount" />

    <ImageView
        android:id="@+id/ivAddition"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/addition_image"
        app:layout_constraintStart_toEndOf="@+id/tvPeopleCount"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:srcCompat="@drawable/addition" />

    <ImageView
        android:id="@+id/ivSubtraction"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/subtraction_image"
        app:layout_constraintEnd_toStartOf="@+id/tvPeopleCount"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:srcCompat="@drawable/subtraction" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="250dp"
        android:layout_height="16dp"
        android:layout_marginTop="12dp"
        android:max="25"
        android:textColor="@color/colorPrimaryLight"
        android:theme="@style/Widget.AppCompat.SeekBar.Discrete"
        android:thumb="@drawable/bubble"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTipPercent" />
</androidx.constraintlayout.widget.ConstraintLayout>